Various fixes requested in gh-59
- Fix meta rendering in SPEC category
- Use commas instead of line breaks to separate list fields in SPEC
  headers
- Use standard `_index.md` for SPEC overview
- Add `pages` and `link` arguments to `page_gallery` shortcode.
  Set `link` to `internal` to link to pages, instead of to GitHub.
- Show headings of SPEC list and pages

--- a/layouts/partials/post_meta.html
+++ b/layouts/partials/post_meta.html
@@ -1,5 +1,6 @@
 {{- $root := . -}}
-{{- if eq (lower .CurrentSection.Title) "specs" }}
+
+{{- if eq .CurrentSection.Title "Scientific Python Ecosystem Coordination (SPEC)" }}
   {{- partial "post_meta/spec_meta.html" $root }}
 {{ else if eq .CurrentSection.Title "SPEC Core Projects" }}
   {{- partial "post_meta/project_meta.html" $root }}
