Simple draft status

--- a/layouts/partials/specs/spec_list.html
+++ b/layouts/partials/specs/spec_list.html
@@ -25,7 +25,7 @@
                 </a>
               {{ end }}
             {{ else }}
-              —
+              DRAFT
             {{ end -}}
           </td>
         </tr>
