--- a/layouts/shortcodes/page_gallery.html
+++ b/layouts/shortcodes/page_gallery.html
@@ -9,7 +9,7 @@
       <a href="{{ $link_url }}" class="name">
         <div class="photo">
           <img
-            src="{{ default (relURL "/img/avatar.png") (.Params.avatar) }}"
+            src="{{ default (relURL "/images/avatar.png") (.Params.avatar) }}"
             loading="lazy"
             alt="Avatar of {{ .Title }}"
           />
