--- a/layouts/shortcodes/person.html
+++ b/layouts/shortcodes/person.html
@@ -2,7 +2,7 @@
   <a href="https://github.com/{{ .Get "github_handle" }}" class="person-name">
     <div class="person-photo">
       <img
-        src="{{ default (relURL "/img/avatar.png") (.Get "avatar") }}"
+        src="{{ default (relURL "/images/avatar.png") (.Get "avatar") }}"
         loading="lazy"
         alt="Avatar picture of @{{ .Get "github_handle" }}"
       />
