--- a/layouts/shortcodes/project.html
+++ b/layouts/shortcodes/project.html
@@ -3,7 +3,7 @@
      <a href="{{ relref $.Page.CurrentSection (printf "%s.md" (.Get "name")) }}" class="team-member-name">
         <div class="team-member-photo">
            <img
-             src="{{ default (relURL "/img/avatar.png") (.Get "avatar") }}"
+             src="{{ default (relURL "/images/avatar.png") (.Get "avatar") }}"
              loading="lazy"
              alt="Avatar picture of @{{ .Get "github_handle" }}"
            />
