--- a/layouts/specs/list.html
+++ b/layouts/specs/list.html
@@ -1,9 +1,30 @@
 {{ define "main" }}
 
-{{ partial "page_structure.html" . }}
+{{ partial "navbar.html" . }}
+{{ partial "navbar-clone.html" . }}
 
-{{ if eq .CurrentSection.Title "Scientific Python Ecosystem Coordination (SPEC)" }}
-  {{ partial "specs/spec_list.html" . }}
-{{ end }}
+<section class="content-padding flex-row">
+    <div class="shortcuts-container">
+        <div class="shortcuts-title">Shortcuts</div>
+        <div id="shortcuts"></div>
+        <div class="sidebar-links">
+            <a href="/gethelp">Get Help</a>
+        </div>
+    </div>
+    <div class="content-container">
+        <div class="columns">
+            <div class="column is-centered-tablet-portrait">
+                <h1 class="title section-title">{{ .Title }}</h1>
+                <h5 class="subtitle is-5 is-muted">{{ .Params.Subtitle }}</h5>
+                <div class="divider"></div>
+            </div>
+        </div>
+        {{ .Content }}
+        {{ if eq .CurrentSection.Title "Scientific Python Ecosystem Coordination (SPEC)" }}
+        {{ partial "specs/spec_list.html" . }}
+        {{ end }}
+    </div>
+  </div>
+</section>
 
 {{ end }}
