--- a/layouts/specs/list.html
+++ b/layouts/specs/list.html
@@ -5,7 +5,7 @@
         <div class="shortcuts-title">Shortcuts</div>
         <div id="shortcuts"></div>
         <div class="sidebar-links">
-            <a href="/gethelp">Get Help</a>
+            <a href="{{ relref . "/gethelp" }}">Get Help</a>
         </div>
     </div>
     <div class="content-container">
