Fix SPEC list rendering

--- a/layouts/specs/list.html
+++ b/layouts/specs/list.html
@@ -17,7 +17,7 @@
             </div>
         </div>
         {{ .Content }}
-        {{ if eq .CurrentSection.Title "Scientific Python Ecosystem Coordination (SPEC)" }}
+        {{ if eq .CurrentSection.Title "Scientific Python Ecosystem Coordination" }}
         {{ partial "specs/spec_list.html" . }}
         {{ end }}
     </div>
