--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -164,3 +164,36 @@ code {
   padding-top: 1.5rem;
   padding-bottom: 1.25rem;
 }
+
+.gallery {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.gallery .entry {
+  padding: 1rem;
+  margin: 0.25rem;
+  width: 11rem;
+  text-align: center;
+  vertical-align: top;
+}
+
+.gallery .photo {
+  display: block;
+}
+
+.gallery .photo img {
+    width: 60px;
+    border-radius: 50%;
+    margin-bottom: 0.5rem;
+}
+
+.gallery .name {
+    font-weight: bold;
+}
+
+.gallery .project {
+  display: block;
+  font-size: 0.8rem;
+  font-style: italic;
+}
