--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -197,3 +197,20 @@ code {
   font-size: 0.8rem;
   font-style: italic;
 }
+
+.video-transcript-button .video-transcript-button-pointer::before{
+  content: "▼";
+}
+
+.video-transcript-button.active .video-transcript-button-pointer::before{
+  content: "▶";
+}
+
+.video-transcript {
+  max-width: 640px;
+  width: 100%;
+  display: block;
+  overflow: auto;
+  background-color: #f1f1f1;
+  padding: 1rem;
+}
