--- a/layouts/partials/post_meta/spec_meta.html
+++ b/layouts/partials/post_meta/spec_meta.html
@@ -28,7 +28,7 @@
             <td class="field-value">
             {{- range $idx, $el := $val }}
               {{ if eq $attr "endorsed-by" }}
-                <a href="{{ relref $.Page.CurrentSection (printf "en/core-projects/%s" $el) }}">{{ $el }}</a>
+                <a href="{{ relref $.Page.CurrentSection (printf "core-projects/%s" $el) }}">{{ $el }}</a>
               {{- else }}
                 {{ $el }}
               {{- end -}}
@@ -41,6 +41,23 @@
             </td>
           {{- end -}}
         </tr>
+      {{/* add warning that this is a draft, i.e. has not been endorsed by 2 projects or more */}}
+      {{- if (and (eq $attr "endorsed-by") (lt (len (or $val "")) 2)) }}
+          {{/* add blank line */}}
+          <tr class="field">
+              <td class="field-name">&nbsp;</td>
+              <td class="field-value"></td>
+          </tr>
+          {{/* add warning */}}
+          <tr class="field" style="background-color:crimson;color:white;">
+            <td class="field-name">
+              &nbsp; WARNING:
+            </td>
+            <td class="field-value">
+              Draft document.
+            </td>
+          </div>
+      {{- end -}}
       {{- end -}}
     {{- end -}}
   </table>
