--- a/layouts/specs/list.html
+++ b/layouts/specs/list.html
@@ -2,11 +2,11 @@
 
 <section class="content-padding flex-row">
     <div class="shortcuts-container">
-        <div class="shortcuts-title">Shortcuts</div>
-        <div id="shortcuts"></div>
-        <div class="sidebar-links">
-            <a href="{{ relref . "/gethelp" }}">Get Help</a>
+        <div class="shortcuts-title">
+            <img src="/images/icons/mui-icons_format-list-bulleted.svg"/>
+            On this page
         </div>
+        <div id="shortcuts"></div>
     </div>
     <div class="content-container">
         <div class="columns">
