Refactor calendar page

--- a/layouts/calendars/list.html
+++ b/layouts/calendars/list.html
@@ -36,7 +36,7 @@
           {{ end }}
         </div>
 
-        <h3 id="subscribe-google-calendar">How to subscribe using Google Calendar</h3>
+        <h3 id="subscribe-google-calendar">Google Calendar</h3>
         Instructions from <a href="https://support.google.com/calendar/answer/37100?hl=en&co=GENIE.Platform%3DDesktop">the Google Calendar docs</a>:
         <ol>
           <li>Open Google Calendar</li>
