--- a/layouts/calendars/list.html
+++ b/layouts/calendars/list.html
@@ -36,6 +36,39 @@
           {{ end }}
         </div>
 
+        <br>
+
+        <link href='https://cdn.jsdelivr.net/npm/fullcalendar@5.11.0/main.min.css' rel='stylesheet' />
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/ical.js/1.4.0/ical.min.js"></script>
+        <script src='https://cdn.jsdelivr.net/npm/fullcalendar@5.11.0/main.min.js'></script>
+        <script src="https://cdn.jsdelivr.net/npm/@fullcalendar/icalendar@5.11.0/main.global.min.js"></script>
+        <script>
+
+          document.addEventListener('DOMContentLoaded', function() {
+            var community_calendar = document.getElementById('community_calendar');
+            var calendar = new FullCalendar.Calendar(community_calendar, {
+                timeZone: 'local',
+                initialView: 'dayGridMonth',
+                headerToolbar: {
+                  left: "prev,next today",
+                  center: "title",
+                  right: "dayGridMonth,timeGridWeek,timeGridDay",
+                },
+                eventSources: [
+                {{ range $key, $value := $.Site.Data.calendars }}
+                    {
+                        url: '{{ $key }}.ics',
+                        format: 'ics'
+                    },
+                {{ end }}
+                ],
+            });
+            calendar.render();
+          });
+
+        </script>
+        <div id='community_calendar'></div>
+
         <h3 id="subscribe-google-calendar">Google Calendar</h3>
         Instructions from <a href="https://support.google.com/calendar/answer/37100?hl=en&co=GENIE.Platform%3DDesktop">the Google Calendar docs</a>:
         <ol>
