--- a/layouts/calendars/list.html
+++ b/layouts/calendars/list.html
@@ -37,15 +37,15 @@
         </div>
 
         <br>
-
+        <script src="https://cdn.jsdelivr.net/npm/vega@5"></script>
         <link href='https://cdn.jsdelivr.net/npm/fullcalendar@5.11.0/main.min.css' rel='stylesheet' />
         <script src="https://cdnjs.cloudflare.com/ajax/libs/ical.js/1.4.0/ical.min.js"></script>
         <script src='https://cdn.jsdelivr.net/npm/fullcalendar@5.11.0/main.min.js'></script>
         <script src="https://cdn.jsdelivr.net/npm/@fullcalendar/icalendar@5.11.0/main.global.min.js"></script>
-        <script>
 
+        <script>
           document.addEventListener('DOMContentLoaded', function() {
-            var cal_colors = ["red", "blue", "green", "grey", "purple"];
+            var cal_colors = vega.scheme('category10');
             var community_calendar = document.getElementById('community_calendar');
             var calendar = new FullCalendar.Calendar(community_calendar, {
                 timeZone: 'local',
@@ -60,7 +60,7 @@
                     {
                         url: '{{ $key }}.ics',
                         format: 'ics',
-                        backgroundColor: cal_colors.pop(),
+                        backgroundColor: cal_colors.shift(),
                     },
                 {{ end }}
                 ],
