--- a/layouts/shortcodes/page_gallery.html
+++ b/layouts/shortcodes/page_gallery.html
@@ -2,7 +2,7 @@
 
 <div class="gallery">
   {{ $section := .Page.GetPage (.Get "pages") }}
-  {{ range $section.Pages }}
+  {{ range (or $section.Pages ($section.Resources.ByType "page")) }}
     <div class="entry">
       {{ $link_internal := eq ($shortcode.Get "link") "internal" }}
       {{ $link_url := or (and $link_internal .RelPermalink) .Params.repository }}
