Add hover title to spec list endorsements; Improve spec list vertical spacing

--- a/layouts/partials/specs/spec_list.html
+++ b/layouts/partials/specs/spec_list.html
@@ -1,7 +1,10 @@
 <table class="spec__table">
   <thead>
     <tr>
-      <td>Title</td><td>Endorsed By</td>
+      <td>Title</td>
+      <td title="The following projects support these recommendations">
+          Endorsed By
+      </td>
     </tr>
   </thead>
   {{- range $.Paginator.Pages.ByTitle }}
