Emphasize these are recommendations

--- a/layouts/partials/specs/spec_list.html
+++ b/layouts/partials/specs/spec_list.html
@@ -1,7 +1,7 @@
 <table class="spec__table">
   <thead>
     <tr>
-      <td>Title</td>
+      <td>Recommendations</td>
       <td title="The following projects support these recommendations">
           Endorsed By
       </td>
