Fix: (post_meta.html) Hugo context
See <https://github.com/scientific-python/scientific-python-hugo-theme/commit/e8382ebf8ab5c1590afcaa84c64ca49cbbf65e1a>.

--- a/layouts/partials/post_meta.html
+++ b/layouts/partials/post_meta.html
@@ -1,11 +1,11 @@
-{{- $root := . -}}
+{{- $root := .context -}}
 
 {{ if eq .CurrentSection.Title "SPEC Core Projects" }}
   {{- partial "post_meta/project_meta.html" $root }}
 {{ else if eq .Section "specs" }}
   {{- partial "post_meta/spec_meta.html" $root }}
 {{ else }}
-  {{- with .Param "post_meta" -}}
+  {{- with .context.Param "post_meta" -}}
     {{- range $field := . -}}
       {{- $p := printf "post_meta/%s.html" $field -}}
       {{- partial $p $root -}}
