--- a/layouts/calendars/list.html
+++ b/layouts/calendars/list.html
@@ -37,11 +37,15 @@
         </div>
 
         <br>
+        <div id='timezone'></div>
+
+        <br>
         <script src="https://cdn.jsdelivr.net/npm/vega@5"></script>
         <link href='https://cdn.jsdelivr.net/npm/fullcalendar@5.11.0/main.min.css' rel='stylesheet' />
         <script src="https://cdnjs.cloudflare.com/ajax/libs/ical.js/1.4.0/ical.min.js"></script>
         <script src='https://cdn.jsdelivr.net/npm/fullcalendar@5.11.0/main.min.js'></script>
         <script src="https://cdn.jsdelivr.net/npm/@fullcalendar/icalendar@5.11.0/main.global.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/@fullcalendar/google-calendar@6.1.9/index.global.min.js"></script>
 
         <script>
           document.addEventListener('DOMContentLoaded', function() {
@@ -73,7 +77,7 @@
             });
             calendar.render();
           });
-
+          document.getElementById('timezone').innerHTML = "All times shown in " + Intl.DateTimeFormat().resolvedOptions().timeZone + ".";
         </script>
         <div id='community_calendar'></div>
 
