--- a/layouts/calendars/list.html
+++ b/layouts/calendars/list.html
@@ -4,10 +4,7 @@
 
 <section class="content-padding flex-row">
     <div class="shortcuts-container">
-        <div class="shortcuts-title">
-            <img src="/images/icons/list-bulleted.svg"/>
-            On this page
-        </div>
+	<div><i class="fa-solid fa-list"></i> On this page</div>
         <div id="shortcuts"></div>
     </div>
     <div class="content-container">
