Add support for externally hosted calendars
- Use a different compile path for local and remotely stored calendars
- Render external links on the calendar download page, but use
  internal links for JS calendar displayt
- Add Pandas's calendar

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -148,6 +148,10 @@ table.spec__table thead {
   font-style: italic;
 }
 
+.calendar-list {
+  padding-top: 1rem;
+}
+
 .calendar-list .calendar {
   padding-bottom: 1rem;
 }
