--- a/layouts/calendars/list.html
+++ b/layouts/calendars/list.html
@@ -3,10 +3,6 @@
 {{ $pageLink := .Permalink }}
 
 <section class="content-padding flex-row">
-    <div class="shortcuts-container">
-	<div><i class="fa-solid fa-list"></i> On this page</div>
-        <div id="shortcuts"></div>
-    </div>
     <div class="content-container">
         <div class="columns">
             <div class="column is-centered-tablet-portrait">
@@ -83,6 +79,11 @@
           <li>Click Add calendar. The calendar appears on the left, under "Other calendars."</li>
         </ol>
         It may take up to 12 hours for calendar changes to propagate.
+    </div>
+  </div>
+  <div id="shortcuts-container">
+    <div id="shortcuts">
+      <div id="shortcuts-header"><i class="fa-solid fa-list"></i> On this page</div>
     </div>
   </div>
 </section>
