--- a/layouts/partials/specs/meta.html
+++ b/layouts/partials/specs/meta.html
@@ -1,13 +1,13 @@
 {{- $root := . -}}
 
 {{ if eq .CurrentSection.Title "SPEC Core Projects" }}
-  {{- partial "post_meta/project_meta.html" $root }}
+  {{- partial "specs/meta/project_meta.html" $root }}
 {{ else if eq .Section "specs" }}
-  {{- partial "post_meta/spec_meta.html" $root }}
+  {{- partial "specs/meta/spec_meta.html" $root }}
 {{ else }}
   {{- with .Param "post_meta" -}}
     {{- range $field := . -}}
-      {{- $p := printf "post_meta/%s.html" $field -}}
+      {{- $p := printf "specs/meta/%s.html" $field -}}
       {{- partial $p $root -}}
     {{- end -}}
   {{- end -}}
