--- a/layouts/grants/list.html
+++ b/layouts/grants/list.html
@@ -18,7 +18,7 @@
         <div class="title">
           {{ if .Params.pdf_url }}
           <div class="pdf">
-            <a href="{{ .Params.pdf_url }}"><img src="/images/pdf-document.svg" width="15px"/></a>
+            <a href="{{ .Params.pdf_url }}"><i class="fa-solid fa-file-pdf"></i></a>
           </div>
           {{ end }}
           <a href="{{ .RelPermalink }}">{{ .Title }}</a>
