Remove custom styling for spec icons

--- a/layouts/partials/specs/spec_list.html
+++ b/layouts/partials/specs/spec_list.html
@@ -23,7 +23,7 @@
               {{ $project_page := $.GetPage (printf "core-projects/%s" $el) }}
               {{ $url := $project_page.RelPermalink }}
               <a href="{{ $url }}">
-                <img title="{{ $project_page.Title }}" src="{{ $project_page.Params.avatar }}" class="endorse-icon"/>
+                <img title="{{ $project_page.Title }}" src="{{ $project_page.Params.avatar }}" class="icon"/>
               </a>
             {{ end }}
           {{ else }}
