--- a/layouts/partials/specs/spec_meta.html
+++ b/layouts/partials/specs/spec_meta.html
@@ -1,12 +1,10 @@
 {{ $page := . }}
 {{ $isSpec := eq (len (findRE "^spec-\\d*" .File.ContentBaseName)) 1 }}
-<div class="sd-container-fluid sd-mb-4" >
-<div class="sd-row">
-<div class="sd-col sd-d-flex-row">
-<div class="sd-card sd-w-100 sd-shadow-sm">
+<div class="sd-card sd-mb-3 sd-shadow-sm">
 <div class="sd-card-body">
-    <table class="spec-meta">
     {{ $meta_fields := (slice "author" "discussion" "history" "endorsed-by") }}
+    {{ $warn := "" }}
+    <dl class="field-list">
     {{- range $attr := $meta_fields -}}
       {{ $val := index $.Params $attr }}
       {{ $attr := strings.TrimPrefix "spec_" $attr }}
@@ -24,13 +22,12 @@
       {{- end -}}
       {{ $isSpecField := (in (slice "endorsed-by" "discussion" ) $attr) }}
       {{ if (or $isSpec (not $isSpecField)) }}
-        <tr class="spec-field">
-          <td class="spec-field-name">
-            {{ $attr | humanize }}:
-          </td>
+          <dt class="field-odd">
+            {{ $attr | humanize }}<span class="colon">:</span></dt>
+          </dt>
           {{- if (reflect.IsSlice $val) -}}
             {{ $len := len $val }}
-            <td class="spec-field-value">
+            <dd class="field-odd">
             {{- range $idx, $el := $val }}
               {{ if eq $attr "endorsed-by" }}
                 <a href="{{ relref $.Page.CurrentSection (printf "core-projects/%s" $el) }}">{{ $el }}</a>
@@ -39,28 +36,26 @@
               {{- end -}}
               {{- if not (eq (add $idx 1) $len) -}},{{ end }}
             {{ end }}
-            </td>
+            </dd>
           {{- else }}
-            <td class="spec-field-value">
+            <dd class="field-odd">
               {{ $val | markdownify }}
-            </td>
+            </dd>
           {{- end -}}
-        </tr>
       {{- end -}}
     {{/* add warning that this is a draft, i.e. has not been endorsed by 2 projects or more */}}
     {{- if (and (eq $attr "endorsed-by") (lt (len (or $val "")) 2)) -}}
-        {{/* add warning */}}
-        <div class="admonition attention spec-meta">
+        {{ $warn = "True" }}
+    {{- end -}}
+    {{- end -}}
+    </dl>
+    {{- if $warn }}
+        <div class="admonition attention">
           <div class="admonition-title">
             Attention
           </div>
           <p>This is a draft document.</p>
         </div>
     {{- end -}}
-    {{- end -}}
-    </table>
-</div>
-</div>
-</div>
 </div>
 </div>
